Added the /processes/{action} endpoint. Also the dmi-util project
